# HadesLRDB

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
libs/lua-5.2.2/: CMakeLists.txt
module/: CMakeLists.txt
module/include/: HadesModApi.h
module/scripts/: init.lua  meta.sjson
module/src/: main.cpp
